# CodeDetect-Compiler

./: .gitignore  CDC.py  LICENSE  README.md  app.py  front.py  pyproject.toml  screenshot.py  settings.ini  update.py
style/: style.css
